--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Freelance Management System{% endblock %}
 
 {% block body %}
-<div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
-    <h1 class="text text-slate-900 font-semibold text-5xl sm:text-6xl lg:text-7xl tracking-tight text-center ">
+<div class="relative max-w-7xl mx-auto pt-20 sm:pt-24 lg:pt-32">
+    <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-[90px] tracking-tight text-center ">
         Simplify your tasks with a Freelance Management System.
     </h1>
     <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
