--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,8 +18,7 @@
 </head>
 
 <body>
-    <div
-        class="absolute inset-0 -z-10 h-full w-full bg-white [background:radial-gradient(125%_125%_at_50%_10%,#fff_40%,#0051FF_100%)]">
+    <div class="absolute inset-0 -z-10 h-full w-full" style="background: linear-gradient(to top, rgb(34 197 94), rgb(74 222 128), #fff)">
         <div class="antialiased px-4 sm:px-6 md:px-8 h-screen">
             {% include "components/navbar.html.twig" %}
             <main>
