--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -1,69 +1,47 @@
-{% set currentRoute = app.request.attributes.get('_route') %}
+<div class="fixed top-0 left-0 h-screen w-16 m-0 flex items-center flex-col justify-between bg-white shadow-lg py-9">
 
-<div class="flex">
-	<div class="fixed top-0 left-0 h-screen w-16 m-0 space-y-9 flex flex-col bg-white shadow-lg text-3xl flex items-center pt-9">
-
-		<a up-target="#content" up-href="{{ path('dashboard_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_index' ? 'border-l-4 border-orange-500' : '' }}">
-			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-				<path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/>
-			</svg>
+	<div class="flex flex-col space-y-9">
+		{# home #}
+		<a up-target="#content" up-href="{{ path('dashboard_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-home"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
 		</a>
 
-		<a up-target="#content" up-href="{{ path('dashboard_address_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_address_index' ? 'border-l-4 border-orange-500' : '' }}">
-			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-				<path stroke-linecap="round" stroke-linejoin="round" d="M9 6.75V15m6-6v8.25m.503 3.498 4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 0 0-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0Z"/>
-			</svg>
+		{# address #}
+		<a up-target="#content" up-href="{{ path('dashboard_address_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-locate"><line x1="2" x2="5" y1="12" y2="12"/><line x1="19" x2="22" y1="12" y2="12"/><line x1="12" x2="12" y1="2" y2="5"/><line x1="12" x2="12" y1="19" y2="22"/><circle cx="12" cy="12" r="7"/></svg>
 		</a>
 
-		<a up-target="#content" up-href="{{ path('dashboard_company_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_company_index' ? 'border-l-4 border-orange-500' : '' }}">
-			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-				<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M9 6.75h1.5m-1.5 3h1.5m-1.5 3h1.5m3-6H15m-1.5 3H15m-1.5 3H15M9 21v-3.375c0-.621.504-1.125 1.125-1.125h3.75c.621 0 1.125.504 1.125 1.125V21"/>
-			</svg>
+		{# company #}
+		<a up-target="#content" up-href="{{ path('dashboard_company_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-building-2"><path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/><path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/><path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/><path d="M10 6h4"/><path d="M10 10h4"/><path d="M10 14h4"/><path d="M10 18h4"/></svg>
 		</a>
 
-		<a up-target="#content" up-href="{{ path('dashboard_user_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_user_index' ? 'border-l-4 border-orange-500' : '' }}">
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-</svg>
-
+		{# user #}
+		<a up-target="#content" up-href="{{ path('dashboard_user_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 0 0-16 0"/></svg>
 		</a>
 
-        		<a up-target="#content" up-href="{{ path('dashboard_person_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_person_index' ? 'border-l-4 border-orange-500' : '' }}">
-			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-				<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"/>
-			</svg>
+		{# person #}
+		<a up-target="#content" up-href="{{ path('dashboard_person_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-search"><circle cx="10" cy="8" r="5"/><path d="M2 21a8 8 0 0 1 10.434-7.62"/><circle cx="18" cy="18" r="3"/><path d="m22 22-1.9-1.9"/></svg>
 		</a>
 
-                		<a up-target="#content" up-href="{{ path('dashboard_mission_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_mission_index' ? 'border-l-4 border-orange-500' : '' }}">
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M6 6.878V6a2.25 2.25 0 0 1 2.25-2.25h7.5A2.25 2.25 0 0 1 18 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 0 0 4.5 9v.878m13.5-3A2.25 2.25 0 0 1 19.5 9v.878m0 0a2.246 2.246 0 0 0-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0 1 21 12v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6c0-.98.626-1.813 1.5-2.122" />
-</svg>
-
+		{# mission #}
+		<a up-target="#content" up-href="{{ path('dashboard_mission_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-minus-2"><path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="M3 15h6"/></svg>
 		</a>
 
-                		<a up-target="#content" up-href="{{ path('dashboard_supplier_index') }}" up-history="replace" class="sidebar-link {{ currentRoute == 'dashboard_supplier_index' ? 'border-l-4 border-orange-500' : '' }}">
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5m8.25 3v6.75m0 0-3-3m3 3 3-3M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
-</svg>
-
+		{# supplier #}
+		<a up-target="#content" up-href="{{ path('dashboard_supplier_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-code-2"><path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="m5 12-3 3 3 3"/><path d="m9 18 3-3-3-3"/></svg>
 		</a>
 	</div>
+
+	<div>
+		{# log-out #}
+		<a up-target="#content" up-href="{{ path('dashboard_index') }}" up-history="replace">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
+		</a>
+	</div>
+
 </div>
-
-<script>
-	// Attendez que le DOM soit chargé
-document.addEventListener('DOMContentLoaded', function () { // Sélectionnez tous les liens de la barre latérale
-const sidebarLinks = document.querySelectorAll('.sidebar-link');
-
-// Parcourez chaque lien et ajoutez un écouteur d'événements click
-sidebarLinks.forEach(function (link) {
-link.addEventListener('click', function () { // Supprimez la classe active de tous les liens
-sidebarLinks.forEach(function (l) {
-l.classList.remove('border-l-4', 'border-orange-500');
-});
-// Ajoutez la classe active uniquement au lien cliqué
-link.classList.add('border-l-4', 'border-orange-500');
-});
-});
-});
-</script>
