--- a/templates/dashboard/home/index.html.twig
+++ b/templates/dashboard/home/index.html.twig
@@ -100,7 +100,7 @@
             cursor: default;
         }
     </style>
-<div class="p-5 bg-gray-100">
+<div class="p-5 bg-gray-100 hidden">
 
     <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
     <div id="roll" onclick="roll()">
@@ -111,6 +111,21 @@
 
 
 </div>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+	h2, p, span {
+        font-family: 'DM Sans', sans-serif;
+        -webkit-font-smoothing: antialiased;
+    }
+</style>
+
+<div class="flex items-center justify-between p-4 antialiased">
+	<div class="flex flex-col space-y-2 w-1/2">
+		<h2 class="text-5xl font-semibold">Dashboard</h2>
+	</div>
+</div>
+
     <script>
         function roll() {
 
