--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -1,132 +1,58 @@
 {% extends 'dashboard_layout.html.twig' %} {% block content %}
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+	td {
+        font-family: 'DM Sans', sans-serif;
+        -webkit-font-smoothing: antialiased;
+    }
+</style>
+
 <section>
-  <div class="flex items-center justify-between">
-    <h2 class="text-3xl font-semibold">Person</h2>
-    <a href="{{ path('dashboard_person_new') }}">
-      <button
-        class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200"
-      >
-        <span>+ Person</span>
-        <div
-          class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]"
-        >
-          <div class="relative h-full w-8 bg-white/20"></div>
-        </div>
-      </button>
-    </a>
-  </div>
-  <div class="mt-10 hidden md:flex md:flex-col">
+    {% include 'dashboard/components/navbar_component.html.twig' with {
+    'title': 'Personne',
+    'text': 'Cette page vous permet de gérer les personnes. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    'button_text': 'Ajouter une personne',
+    'button_url': path('dashboard_person_new')
+    } %}
+  <div class="mt-6 hidden md:flex md:flex-col">
     <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
       <div
         class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg"
       >
         <table class="min-w-full divide-y divide-gray-300">
-          <thead>
-            <tr>
-              <th
-                scope="col"
-                class="py-3.5 pl-6 pr-3 text-left text-sm font-semibold text-gray-900"
-              >
-                id
-              </th>
-              <th
-                scope="col"
-                class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
-              >
-                lastname
-              </th>
-              <th
-                scope="col"
-                class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
-              >
-                firstname
-              </th>
-              <th
-                scope="col"
-                class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
-              >
-                phone
-              </th>
-              <th
-                scope="col"
-                class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
-              >
-                company
-              </th>
-              <th
-                scope="col"
-                class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
-              >
-                created_at
-              </th>
-              <th
-                scope="col"
-                class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
-              >
-                Actions
-              </th>
-            </tr>
+                  <thead class="bg-gray-50 w-full">
+            {% include 'dashboard/components/table_header_row.html.twig' with {'columns': ['Id', 'Prénom', 'Nom', 'Téléphone', 'Entreprise', 'Créer le']}%}
           </thead>
           <tbody class="divide-y divide-gray-200 bg-white">
             {% for person in persons %}
             <tr>
               <td
-                class="whitespace-nowrap py-4 pl-1 pr-3 text-sm font-medium text-gray-900 sm:pl-6"
+                class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6"
               >
                 {{ person.id }}
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 {{ person.lastname ?? 'null' }}
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 {{ person.firstname ?? 'null' }}
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 {{ person.phone ?? 'null' }}
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 <a href="#">{{ person.company.name ?? 'null' }}</a>
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 {{ person.createdAt|date('Y-m-d') }}
-              </td>
-              <td
-                x-data="{ dropdownOpen: false }"
-                class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6"
-              >
-                <div @click="dropdownOpen = !dropdownOpen">
-                  <i class="fa-solid fa-ellipsis-vertical"></i>
-                </div>
-                <div
-                  x-show="dropdownOpen"
-                  x-cloak
-                  class="absolute right-0 bg-white text-black rounded-lg w-36 p-2 z-20"
-                >
-                  <ul class="hoverlist [&>li>a]:justify-end">
-                    <li>
-                      <a
-                        href="{{
-                          path('dashboard_person_show', { id: person.id })
-                        }}"
-                        >Show</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="{{
-                          path('dashboard_person_edit', { id: person.id })
-                        }}"
-                        >Edit</a
-                      >
-                    </li>
-                  </ul>
-                </div>
               </td>
             </tr>
             {% endfor %}
           </tbody>
         </table>
-      </div>
+      </div>{{ knp_pagination_render(persons, 'dashboard/components/tailwind_pagination.html.twig', {'slidingPagination': false}) }}
     </div>
   </div>
 </section>
