--- a/templates/dashboard/user/index.html.twig
+++ b/templates/dashboard/user/index.html.twig
@@ -1,61 +1,55 @@
 {% extends 'dashboard_layout.html.twig' %} {% block content %}
 
-<section>
-  {% include 'dashboard/components/button.html.twig' with {
-  'title': 'User',
-  'button_text': 'User',
-  'button_url': path('dashboard_user_new') } %}
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
-  <div class="mt-10 hidden md:flex md:flex-col">
+	td {
+        font-family: 'DM Sans', sans-serif;
+        -webkit-font-smoothing: antialiased;
+    }
+</style>
+
+
+<section>
+    {% include 'dashboard/components/navbar_component.html.twig' with {
+    'title': 'Utilisateur',
+    'text': 'Cette page vous permet de gérer les utilisateurs. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    'button_text': 'Ajouter un utilisateur',
+    'button_url': path('dashboard_user_new')
+    } %}
+
+  <div class="mt-6 hidden md:flex md:flex-col">
     <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
       <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
         <table class="min-w-full divide-y divide-gray-300">
-          <thead class="bg-gray-50">
-            {% include 'dashboard/components/table_header_row.html.twig' with
-            {'columns': ['id', 'person', 'email', 'created_at']}%}
+
+          <thead class="bg-gray-50 w-full">
+            {% include 'dashboard/components/table_header_row.html.twig' with {'columns': ['Id', 'Personne', 'Email', 'Créer le']}%}
           </thead>
-          <tbody class="divide-y divide-gray-200 bg-white">
+                    <tbody class="divide-y divide-gray-200 bg-white">
             {% for user in users %}
             <tr>
-              <td class="whitespace-nowrap py-4 pl-1 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+              <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
                 {{ user.id }}
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 <a href="{{
                     path('dashboard_person_show', { id: user.person.id })
                   }}">{{ user.person.firstName }} {{ user.person.lastName }}</a>
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 {{ user.email }}
               </td>
-              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+              <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                 {{ user.createdAt|date('Y-m-d') }}
-              </td>
-              <td x-data="{ dropdownOpen: false }"
-                class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                <div @click="dropdownOpen = !dropdownOpen">
-                  <i class="fa-solid fa-ellipsis-vertical"></i>
-                </div>
-                <div x-show="dropdownOpen" x-cloak
-                  class="absolute right-0 bg-white text-black rounded-lg w-36 p-2 z-20">
-                  <ul class="hoverlist [&>li>a]:justify-end">
-                    <li>
-                      <a href="{{
-                          path('dashboard_user_show', { id: user.id })
-                        }}">Show</a>
-                    </li>
-                    <li>
-                      <a href="{{
-                          path('dashboard_user_edit', { id: user.id })
-                        }}">Edit</a>
-                    </li>
-                  </ul>
-                </div>
               </td>
             </tr>
             {% endfor %}
           </tbody>
         </table>
+        </div>
+                        {{ knp_pagination_render(users, 'dashboard/components/tailwind_pagination.html.twig', {'slidingPagination': false}) }}
+        </div>
       </div>
     </div>
   </div>
