--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="absolute inset-0 -z-10 h-full w-full" style="background: linear-gradient(to top, rgb(34 197 94), rgb(74 222 128), #fff)">
+    <div class="absolute inset-0 -z-10 h-full w-full bg-gradient-to-b from-slate-50 via-green-100 to-green-500">
         <div class="antialiased px-4 sm:px-6 md:px-8 h-screen">
             {% include "components/navbar.html.twig" %}
             <main>
