--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -1,16 +1,29 @@
 {% extends 'dashboard_layout.html.twig' %} {% block content %}
 
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+	h2, p, span, a, label, input, button, select, option, textarea{
+        font-family: 'DM Sans', sans-serif;
+        -webkit-font-smoothing: antialiased;
+    }
+</style>
+
 <section>
   {{ form_start(addressForm) }}
-  <div class="border-b border-gray-900/10 py-12">
-    <h2 class="text-xl font-bold mb-4">Address</h2>
-    <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
+<div class="flex items-center justify-between p-4 antialiased">
+	<div class="flex flex-col space-y-2 w-1/2">
+		<h2 class="text-5xl font-semibold">Créer une adresse</h2>
+	</div>
+</div>
+    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:px-6 lg:px-8">
       <div class="sm:col-span-3">
         {{ form_label(addressForm.nbStreet) }}
         <input
           name="{{ field_name(addressForm.nbStreet) }}"
           value="{{ field_value(addressForm.nbStreet) }}"
-          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         />
       </div>
 
@@ -19,7 +32,7 @@
         <input
           name="{{ field_name(addressForm.street) }}"
           value="{{ field_value(addressForm.street) }}"
-          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         />
       </div>
 
@@ -28,7 +41,7 @@
         <input
           name="{{ field_name(addressForm.city) }}"
           value="{{ field_value(addressForm.city) }}"
-          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         />
       </div>
 
@@ -37,25 +50,21 @@
         <input
           name="{{ field_name(addressForm.zipCode) }}"
           value="{{ field_value(addressForm.zipCode) }}"
-          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         />
       </div>
     </div>
-  </div>
 
   <div class="mt-6 flex items-center justify-end gap-x-6">
-    <button type="button" class="text-sm font-semibold leading-6 text-gray-900">
+    <span type="button" class="font-semibold antialiased leading-6 text-gray-900">
       Cancel
-    </button>
-    <button
-      type="submit"
-      class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-    >
-      Save
-    </button>
-  </div>
+    </span>
+                        <a href="" class="page-link relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+                            <span class="relative">Sauvegarder</span>
+                        </a>
 
   {{ form_end(addressForm) }}
 </section>
+  </div>
 
 {% endblock %}
