--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -23,7 +23,8 @@
         <input
           name="{{ field_name(addressForm.nbStreet) }}"
           value="{{ field_value(addressForm.nbStreet) }}"
-          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          placeholder="23"
+          class="block w-full rounded-md border-0 px-4 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:leading-6"
         />
       </div>
 
@@ -32,7 +33,8 @@
         <input
           name="{{ field_name(addressForm.street) }}"
           value="{{ field_value(addressForm.street) }}"
-          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          placeholder="Rue de la Paix"
+          class="block w-full rounded-md border-0 px-4 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:leading-6"
         />
       </div>
 
@@ -41,7 +43,8 @@
         <input
           name="{{ field_name(addressForm.city) }}"
           value="{{ field_value(addressForm.city) }}"
-          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          placeholder="Paris"
+          class="block w-full rounded-md border-0 px-4 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:leading-6"
         />
       </div>
 
@@ -50,7 +53,8 @@
         <input
           name="{{ field_name(addressForm.zipCode) }}"
           value="{{ field_value(addressForm.zipCode) }}"
-          class="block w-full rounded-md border-0 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          placeholder="75000"
+          class="block w-full rounded-md border-0 px-4 py-2 mt-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:leading-6"
         />
       </div>
     </div>
