--- a/templates/dashboard/home/index.html.twig
+++ b/templates/dashboard/home/index.html.twig
@@ -1,116 +1,7 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <style>
-        #rick {
-            visibility: hidden;
-            visibility-top: 49.9%;
-            /* Left 49.9 */
-            visibility-left: 49.9%;
-            /* This makes stuff centered */
-            /* For Chrome */
-            visibility--webkit-transform: translate(-50.1%, -50.1%);
-            /* For ... IE */
-            visibility-transform: translate(-50.1%, -50.1%);
-            position: fixed;
-        }
 
-        #roll {
-            position: relative;
-            border: none;
-            outline: 0;
-            border-bottom: 2px solid transparent;
-            border-top: 2px solid transparent;
-            padding: 0.5em 1em;
-            display: inline-block;
-            border-radius: 2px;
-            font-size: 13px;
-            width: 50px;
-            margin: 0 auto;
-            background-color: #0BAAD4;
-            color: white;
-        }
-        #roll:hover {
-            border-bottom-color: #0883a4;
-            background-color: #1fc7f3;
-        }
-        #roll:active {
-            background-color: #1fc7f3;
-            border-top-color: #0883a4;
-            border-bottom-color: transparent;
-        }
-        #roll:before {
-            visibility: hidden;
-            content: "";
-            top: -2px;
-            bottom: -2px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            position: absolute;
-            width: 100%;
-            padding: inherit;
-            background: #aaaaaa;
-            border-top: 2px solid #aaaaaa;
-            border-bottom: 2px solid #aaaaaa;
-            border-radius: 2px;
-            transition: width 0.5s;
-        }
-        #roll:after {
-            visibility: hidden;
-            font-family: "Open Sans", Helvetica, Arial, Verdana, sans-serif;
-            font-size: 16px;
-            line-height: 16px;
-            color: #454545;
-            position: absolute;
-            top: 2px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            width: 26px;
-            height: 26px;
-            padding: 5px;
-            border-radius: 26px;
-            color: white;
-            content: "";
-        }
-        #roll.loading:after {
-            visibility: visible;
-            animation: loader 1s infinite linear;
-        }
-        #roll.loading:before {
-            visibility: visible;
-            border-radius: 26px;
-            width: 33px;
-            margin: 0 auto;
-            right: 0;
-            left: 0;
-        }
-        #roll.done {
-            visibility: hidden;
-        }
-        #roll.done:before {
-            content: "";
-            font-family: FontAwesome;
-            visibility: visible;
-            background: #4FA86B;
-            border-color: #4FA86B;
-        }
-        #roll.loading, #roll.done {
-            cursor: default;
-        }
-    </style>
-<div class="p-5 bg-gray-100 hidden">
-
-    <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-    <div id="roll" onclick="roll()">
-
-        Click me
-
-    </div>
-
-
-</div>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -120,17 +11,41 @@
     }
 </style>
 
-<div class="flex items-center justify-between p-4 antialiased">
-	<div class="flex flex-col space-y-2 w-1/2">
-		<h2 class="text-5xl font-semibold">Dashboard</h2>
-	</div>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script>
-        function roll() {
+<main>
+    <div class="flex items-center justify-between p-4 antialiased">
+	    <div class="flex flex-col space-y-2 w-1/2">
+		    <h2 class="text-5xl font-semibold">Dashboard</h2>
+	    </div>
+    </div>
+    <div>
+        <canvas id="myChart"></canvas>
+    </div>
+</main>
 
-            document.getElementById("rick").style.visibility = "visible";
 
+<script>
+  const ctx = document.getElementById('myChart');
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
         }
-    </script>
+      }
+    }
+  });
+</script>
+
 {% endblock %}
