--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="//unpkg.com/alpinejs" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css"
-    />
-    <script
-      src="https://kit.fontawesome.com/e320a50358.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-  </head>
 
-  <body x-data="{sidebarOpen: true}">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="//unpkg.com/alpinejs" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css" />
+  <script src="https://kit.fontawesome.com/e320a50358.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+  <link href="{{ asset('./styles/css/dashboard_layout.css')}}" rel="stylesheet" />
+</head>
 
+<body>
 
-      <div class="flex-col w-full h-screen">
-      {% include 'components/sidebar.html.twig' %}
-        <div id="content" class="pl-20 p-4">
-          {% block content %}{% endblock %}
-        </div>
-      </div>
+  <div class="flex-col w-full h-screen">
+    {% include 'components/sidebar.html.twig' %}
+    <div id="content" class="pl-20 p-4">
+      {% block content %}{% endblock %}
     </div>
-  </body>
+  </div>
+
+</body>
+
 </html>
