--- a/templates/dashboard/company/new.html.twig
+++ b/templates/dashboard/company/new.html.twig
@@ -8,7 +8,7 @@
     {{ form_widget(companyForm) }}
     <button type="submit" class="btn btn-primary">Créer</button>
     {{ form_end(companyForm) }}
-    <a href="{{ path('dashboard_address_new') }}">Créer une nouvelle adresse</a>
+    <a href="{{ path('address_new') }}">Créer une nouvelle adresse</a>
     <br>
     <a href="{{ path('dashboard_company_index') }}">annuler</a>
 
