--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -52,7 +52,8 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>{{ knp_pagination_render(persons, 'dashboard/components/tailwind_pagination.html.twig', {'slidingPagination': false}) }}
+      </div>
+      {{ knp_pagination_render(persons, 'dashboard/components/tailwind_pagination.html.twig', {'slidingPagination': false}) }}
     </div>
   </div>
 </section>
