--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -2,7 +2,7 @@
 
     {% include 'dashboard/components/navbar_component.html.twig' with {
     'title': 'Mission',
-    'text': 'Cette page vous permet de gérer les missions. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    'text': 'Cette page vous permet de gérer les missions. Vous pouvez consulter, ajouter, modifier ou supprimer des missions selon vos besoins.',
     'button_text': 'Ajouter une mission',
     'button_url': path('dashboard_mission_new')
     } %}
