--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -12,7 +12,7 @@
 <section>
     {% include 'dashboard/components/navbar_component.html.twig' with {
     'title': 'Personne',
-    'text': 'Cette page vous permet de gérer les personnes. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    'text': 'Cette page vous permet de gérer les personnes. Vous pouvez consulter, ajouter, modifier ou supprimer des personnes selon vos besoins.',
     'button_text': 'Ajouter une personne',
     'button_url': path('dashboard_person_new')
     } %}
