--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -5,7 +5,7 @@
 <section>
     {% include 'dashboard/components/navbar_component.html.twig' with {
     'title': 'Entreprise',
-    'text': 'Cette page vous permet de gérer les entreprises. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    'text': 'Cette page vous permet de gérer les entreprises. Vous pouvez consulter, ajouter, modifier ou supprimer des entreprises selon vos besoins.',
     'button_text': 'Ajouter une entreprise',
     'button_url': path('dashboard_company_new')
     } %}
