--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -5,7 +5,7 @@
 	<section>
 		{% include 'dashboard/components/navbar_component.html.twig' with {
     		'title': 'Fournisseur',
-    		'text': 'Cette page vous permet de gérer les fournisseurs. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    		'text': 'Cette page vous permet de gérer les missions fournisseurs. Vous pouvez consulter, ajouter, modifier ou supprimer des missions fournisseurs selon vos besoins.',
     		'button_text': 'Ajouter un fournisseur',
     		'button_url': path('dashboard_supplier_new')
     } %}
