--- a/templates/dashboard/user/index.html.twig
+++ b/templates/dashboard/user/index.html.twig
@@ -13,7 +13,7 @@
 <section>
     {% include 'dashboard/components/navbar_component.html.twig' with {
     'title': 'Utilisateur',
-    'text': 'Cette page vous permet de gérer les utilisateurs. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
+    'text': 'Cette page vous permet de gérer les utilisateurs. Vous pouvez consulter, ajouter, modifier ou supprimer des utilisateurs selon vos besoins.',
     'button_text': 'Ajouter un utilisateur',
     'button_url': path('dashboard_user_new')
     } %}
