--- a/templates/dashboard/company/edit.html.twig
+++ b/templates/dashboard/company/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'dashboard_layout.html.twig' %}
 
+{% set componentPath = 'dashboard/company/components/' %}
+
 {% block content %}
 
     <h1>Edit de la company <span>{{ company.name }}</span></h1>
@@ -8,7 +10,9 @@
     {{ form_widget(companyForm) }}
     <button type="submit" class="btn btn-primary">Modifier</button>
     {{ form_end(companyForm) }}
-    <a href="{{ path('dashboard_company_index') }}">back to list</a>
-    {{ include('dashboard/company/_delete_form.html.twig') }}
+    <a href="{{ path('dashboard_company_index') }}">Back to list</a>
+
+    {% include componentPath ~ 'delete_form.html.twig' %}
+
 {% endblock %}
 
